<resources>
    <string name="app_name">Workout routine</string>
    <string name="exerciseName">Exercise name</string>
    <string name="repetitions">Repetitions:</string>
    <string name="repUp">+1</string>
    <string name="repDown">-1</string>
    <string name="weightInKg">Weight(kg):</string>
    <string name="weightUp">+1kg</string>
    <string name="weightDown">-1kg</string>
    <string name="startTimer">Start timer</string>
    <string name="resetTimer">Reset</string>
    <string name="stopTimer">Stop</string>
    <string name="nextExercise">Next</string>
    <string name="previousExercise">Previous</string>
    <string name="settings">Settings</string>
    <string name="weight">0</string>
    <string name="reps">0</string>
    <string name="timer">1:00</string>
    <string name="your_sets">Your sets</string>
    <string name="your_exercise_sets">Your exercise sets:</string>
    <string name="create_new_set">Create new set</string>
    <string-array name="exercises">
        <item>Set A</item>
        <item>Set B</item>
    </string-array>

</resources>