<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/exerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/exerciseName"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/repetitions"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseName">

        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/repetitions"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/numberOfReps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="2"
            android:gravity="center_vertical"
            android:inputType="number"
            android:text="@string/reps"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:minWidth="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonRepUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:text="@string/repUp"
                android:onClick="onAddOneRep" />

            <Button
                android:id="@+id/buttonRepDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:text="@string/repDown"
                android:onClick="onRemoveOneRep" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repetitions">

        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/weightInKg"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/numberOfKg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="2"
            android:gravity="center_vertical"
            android:inputType="numberDecimal"
            android:text="@string/weight"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:minWidth="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonWeightUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:text="@string/weightUp"
                android:onClick="onAddOneKg" />

            <Button
                android:id="@+id/buttonWeightDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:text="@string/weightDown"
                android:onClick="onRemoveOneKg" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNextExercise"
        android:text="@string/nextExercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPreviousExercise"
        android:text="@string/previousExercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/timeLeft"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="center"
            android:inputType="time"
            android:text="@string/timer"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonStartTimer"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:onClick="onTimerStart"
            android:text="@string/startTimer"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="40dp">

            <Button
                android:id="@+id/buttonStopTimer"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onStopTimer"
                android:text="@string/stopTimer"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonResetTimer"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onResetTimer"
                android:text="@string/resetTimer"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerExerciseSet"
        android:layout_width="wrap_content"
        android:minHeight="50dp"
        android:minWidth="100dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonYourSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_sets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onYourSet"/>

</androidx.constraintlayout.widget.ConstraintLayout>